--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,26 @@
                 android:layout_height="50dp"
                 android:background="@color/colorWhite">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/instagramwrite"
+                        android:layout_alignParentLeft="true"/>
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/send_icon"
+                        android:layout_marginTop="15dp"
+                        android:layout_alignParentRight="true"/>
+
+
+                </RelativeLayout>
+
             </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
