--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,14 +24,15 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/instagramwrite"
+                        android:src="@drawable/instawritten"
                         android:layout_alignParentLeft="true"/>
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
                         android:src="@drawable/send_icon"
                         android:layout_marginTop="15dp"
+                        android:layout_centerInParent="true"
                         android:layout_alignParentRight="true"/>
 
 
@@ -40,6 +41,14 @@
             </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/app_bar_layout">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
