--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,31 +9,29 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/search_toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorWhite">
+            android:background="@drawable/button_black_background">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:src="@drawable/search"
-                    android:layout_alignParentLeft="true"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:src="@drawable/send_icon"
-                    android:layout_marginTop="15dp"
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:hint="@string/search"
+                    android:drawableLeft="@drawable/search" />
 
 
             </RelativeLayout>
