--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,22 +16,30 @@
             android:id="@+id/search_toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
             android:background="@drawable/button_black_background">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <ImageView
+                    android:id="@+id/search_fragment_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/search"/>
+
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="15dp"
+                    android:textColor="@color/colorPrimary"
                     android:hint="@string/search"
-                    android:drawableLeft="@drawable/search" />
+                    android:layout_toEndOf="@+id/search_fragment_icon"/>
 
 
             </RelativeLayout>
@@ -44,7 +52,8 @@
         android:id="@+id/recycler_view_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/app_bar_layout_search">
+        android:layout_below="@+id/app_bar_layout_search"
+        android:layout_marginTop="1dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
